--- a/components/administration/articles.html
+++ b/components/administration/articles.html
@@ -277,8 +277,8 @@
                     <!-- End row --> 
                 </div>
 
-                <div class="flex justify-end bg-gray-300 py-1 px-2 rounded-b-sm shadow-md">
-                    <p class="text-xs font-semibold text-gray-600 uppercase">Articles count: 2</p> 
+                <div class="flex justify-end bg-white px-3 pb-2 rounded-b-sm shadow-md">
+                    <p class="text-xs font-semibold text-gray-400 uppercase">Articles count: 2</p> 
                 </div>
             </div>
         </div>
