--- a/components/login-form.html
+++ b/components/login-form.html
@@ -25,8 +25,8 @@
         <div class="flex justify-center items-center h-screen">
             <div class="flex-1 max-w-lg p-8 mx-2 bg-white rounded-sm shadow-md">
                 <section class="pt-2 pb-4">
-                    <h1 class="text-xl font-extrabold uppercase font-montserrat">Login</h1>
-                    <p class="text-sm text-gray-400 font-montserrat">
+                    <h1 class="text-xl font-extrabold uppercase">Login</h1>
+                    <p class="text-sm text-gray-400">
                         The creative adult is the child who survived.
                     </p>
                 </section>
@@ -35,7 +35,7 @@
                     <form class="flex flex-col" method="POST" action="#">
                         <!-- Username -->
                         <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase font-montserrat" for="username">
+                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="username">
                                 Username
                             </label>
                             <input type="text" 
@@ -43,20 +43,20 @@
                                    name="username" 
                                    autofocus
                                    required
-                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm font-montserrat focus:outline-none focus:border-blue-600 hover:border-blue-300"
+                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300"
                             />
                         </div>
 
                         <!-- Password -->
                         <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase font-montserrat" for="password">
+                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password">
                                 Password
                             </label>
                             <input type="password" 
                                    id="password" 
                                    name="password" 
                                    required
-                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm font-montserrat focus:outline-none focus:border-blue-600 hover:border-blue-300"
+                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300"
                             />
                         </div>
 
@@ -68,7 +68,7 @@
                                     <div class="flex cursor-pointer" @click="checked = ! checked">
                                         <!-- Checkbox -->
                                         <div :class="checked ? 'bg-blue-600' : 'bg-gray-200'" class="w-4 h-4 mr-3 rounded-sm"></div>
-                                        <span class="text-xs font-bold text-gray-600 transition duration-300 font-montserrat">
+                                        <span class="text-xs font-bold text-gray-600 transition duration-300">
                                             Stay connected
                                         </span>
                                     </div>
@@ -76,13 +76,13 @@
                             </div>
 
                             <!-- Forgot your password -->
-                            <a href="#" class="text-xs font-bold text-gray-600 transition duration-300 cursor-pointer font-montserrat hover:text-gray-400">
+                            <a href="#" class="text-xs font-bold text-gray-600 transition duration-300 cursor-pointer hover:text-gray-400">
                                 Forgot password?
                             </a>
                         </div>
 
                         <button type="submit" 
-                                class="p-6 mb-4 text-sm font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm font-montserrat focus:outline-none hover:bg-blue-900 hover:shadow-md">
+                                class="p-6 mb-4 text-sm font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm focus:outline-none hover:bg-blue-900 hover:shadow-md">
                             Login
                         </button>
                     </form>
