feat: select menu country in english

--- a/components/select-form.html
+++ b/components/select-form.html
@@ -47,10 +47,10 @@
 
                             <div x-show="isOpen"
                                  class="absolute top-18 w-full flex flex-col bg-gray-200 font-poppins text-sm cursor-pointer">
-                                 <div class="px-3 py-2 text-gray-400 font-semibold hover:bg-gray-100 hover:text-gray-600" @click="active = 'Argentine'">Argentine</div>
-                                 <div class="px-3 py-2 text-gray-400 font-semibold hover:bg-gray-100 hover:text-gray-600" @click="active = 'Bénin'">Bénin</div>
-                                 <div class="px-3 py-2 text-gray-400 font-semibold hover:bg-gray-100 hover:text-gray-600" @click="active = 'Colombie'">Colombie</div>
-                                 <div class="px-3 py-2 text-gray-400 font-semibold hover:bg-gray-100 hover:text-gray-600" @click="active = 'Danemark'">Danemark</div>
+                                 <div class="px-3 py-2 text-gray-400 font-semibold hover:bg-gray-100 hover:text-gray-600" @click="active = 'Argentina'">Argentina</div>
+                                 <div class="px-3 py-2 text-gray-400 font-semibold hover:bg-gray-100 hover:text-gray-600" @click="active = 'Colombia'">Colombia</div>
+                                 <div class="px-3 py-2 text-gray-400 font-semibold hover:bg-gray-100 hover:text-gray-600" @click="active = 'France'">France</div>
+                                 <div class="px-3 py-2 text-gray-400 font-semibold hover:bg-gray-100 hover:text-gray-600" @click="active = 'Spain'">Spain</div>
                             </div>
 
                             <input type="hidden" name="country_id" :value="active"  />
