fix: button submit login form bis

--- a/components/login-form-bis.html
+++ b/components/login-form-bis.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <button type="button" 
-                        class="p-4 text-white bg-blue-600 hover:bg-blue-900 w-full rounded-sm transition ease-in-out duration-300 uppercase mb-2"
+                        class="p-4 focus:outline-none text-white bg-blue-600 hover:bg-blue-900 w-full rounded-sm transition ease-in-out duration-300 uppercase mb-2"
                 >
                     Sign in
                 </button>
