fix: about text

--- a/components/about.html
+++ b/components/about.html
@@ -41,8 +41,8 @@
 					j’ai accumulé diverses expériences de gestion de projet et de développement web. 
 				</p>
 				<p>
-					Aujourd’hui, je me rends compte que j’aime appresndre et faire apprendre ce qui me passionne, 
-					c'est pourquoi j'aimerais vous transmettre mon savoir-faire afin de vous donner les outils et les moyens de réaliser le projet de vos rêves.
+					J’aime apprendre et enseigner ce qui me passionne. 
+					C'est pourquoi, aujourd’hui je transmet mon savoir-faire afin de vous donner les outils et les moyens de réaliser le projet de vos rêves.
 				</p>
 			</div>
 		</div>
