fix: about page description

--- a/components/about.html
+++ b/components/about.html
@@ -16,10 +16,8 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body class="flex items-center justify-center h-screen bg-gray-100" style="font-family: 'Poppins';">
-    
-
-    <main class="flex flex-col  max-w-xl min-h-64  rounded-t-sm">
-		<div class="px-16 pt-10 pb-16 bg-white shadow-md">
+    <main class="flex flex-col max-w-xl rounded-t-sm shadow-md">
+		<div class="px-16 pt-10 pb-16 bg-white">
 			<!-- Profile -->
 			<div class="flex flex-col items-center mb-4" style="margin-top: -80px;">
 				<img src="../img/logo-sylent-n-square.png" title="Aunim Hassan" alt="Aunim Hassan" class="w-20 h-20 shadow-md rounded-full" />
@@ -32,7 +30,6 @@
 			<div class="text-center font-light text-sm mb-8 text-gray-400">
 				20 Juin 1992 - Toulouse, FRANCE
 			</div>
-
 			<!-- Description -->
 			<div class="text-justify text-sm">
 				<p class="mb-8">
@@ -42,7 +39,9 @@
 				</p>
 				<p>
 					J’aime apprendre et enseigner ce qui me passionne. 
-					C'est pourquoi, aujourd’hui je transmet mon savoir-faire afin de vous donner les outils et les moyens de réaliser le projet de vos rêves.
+					C'est pourquoi, 
+					aujourd’hui je transmet mon savoir-faire afin de vous fournir les meilleurs outils et les moyens nécéssaires 
+					à la réalisation du projet de vos rêves.
 				</p>
 			</div>
 		</div>
