fix: about description

--- a/components/about.html
+++ b/components/about.html
@@ -38,10 +38,9 @@
 					j’ai accumulé diverses expériences de gestion de projet et de développement web. 
 				</p>
 				<p>
-					J’aime apprendre et enseigner ce qui me passionne. 
-					C'est pourquoi, 
-					aujourd’hui je transmet mon savoir-faire afin de vous fournir les meilleurs outils et les moyens nécéssaires 
-					à la réalisation du projet de vos rêves.
+					J’aime apprendre et enseigner ce qui me passionne. C'est pourquoi, 
+					aujourd’hui je mets à profit et je transmets mon savoir-faire 
+					afin de vous fournir les meilleurs outils et moyens nécessaires à la réalisation des vos projets.
 				</p>
 			</div>
 		</div>
