--- a/components/smart-tag.html
+++ b/components/smart-tag.html
@@ -32,13 +32,21 @@
                 <div class="flex">
                     <div class="flex-1">
                         <div x-data="{ isActive: false }" class="relative">
-                            <div class="bg-yellow-100 text-yellow-500 text-sm p-2 rounded-sm text-center cursor-pointer"
+                            <div class="bg-yellow-100 text-yellow-500 text-sm p-2 rounded-sm text-center cursor-help"
                                  @mouseover="isActive = true"
                                  @mouseover.away="isActive = false">
                                 See more
                             </div>
  
-                            <div x-show="isActive" class="absolute top-10 w-64 text-xs bg-yellow-100 shadow-md py-2 px-4">
+                            <div x-show="isActive" 
+                                 class="absolute top-11 w-64 text-xs rounded-sm bg-white shadow-md py-2 px-4"
+                                 x-transition:enter="transition transform ease-out duration-300"
+                                 x-transition:enter-start="opacity-0 translate-y-16 rotate-12"
+                                 x-transition:enter-end="opacity-100 translate-y-0 rotate-0"
+                                 x-transition:leave="transition transform ease-in duration-100"
+                                 x-transition:leave-start="opacity-100 translate-y-0 rotate-0"
+                                 x-transition:leave-end="opacity-0 translate-y-16 rotate-12"
+                            >
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident laboriosam magnam quod. In ipsum eius voluptatibus consequatur fugit? Fugit animi eos voluptatibus enim aspernatur culpa illo. Quidem ipsum hic eaque.
                             </div>
            
